fixing header-slider bullets layout bug

--- a/sass/components/_header-slider.scss
+++ b/sass/components/_header-slider.scss
@@ -53,10 +53,10 @@
     right: 0.3rem;
     position: relative;
     background: url("/img/header/slider/bullet-inactive.svg");
-    margin: var(--swiper-pagination-bullet-vertical-gap, 20px) 0 !important;
+    margin: 2rem 0 !important;
 
     @include respond(tab-portrait) {
-      margin: var(--swiper-pagination-bullet-vertical-gap, 8px) 0 !important;
+      margin: 1.9rem 0 !important;
       right: 0.65rem;
     }
   }
